# an-website

./: .bandit  .browserslistrc  .coveragerc  .dockerignore  .editorconfig  .eslintignore  .eslintrc.yaml  .flake8  .gitattributes  .gitignore  .isort.cfg  .mailmap  .mypy.ini  .noai  .npmrc  .pnpmfile.cjs  .pre-commit-config.yaml  .pylintrc  .pyup.yml  Containerfile  Dockerfile  Justfile  LICENSE  LICENSE.md  MANIFEST.in  Pipfile  README.md  __main__.py  an-website.ini  an-website.service  an_website.ini  build-args.sh  build-oci-image.sh  bunfig.toml  check-requirements.txt  check-ts.sh  check.sh  compose.yml  config.ini.default  config.ini.example  (+38 more)
.github/: deadpendency.yaml
an_website/: .eslintrc.yaml  __init__.py  __init__.🐍  __main__.py  __main__.🐍  backdoor_client.py  ca-bundle.crt  ca-license.txt  content_types.json  fake_orjson.py  global.d.ts  json.py  main.py  main.🐍  media_types.json  orjson_temp_fix.py  screenfetch  tsconfig.json
coverage/: d_05f7c05a151ea943___init___py.html  d_05f7c05a151ea943_update_py.html  d_0f0494231a8c3654___init___py.html  d_0f0494231a8c3654_host_info_py.html  d_162aa3921281be85___init___py.html  d_162aa3921281be85_endpoints_py.html  d_24debfddfee1539d___init___py.html  d_24debfddfee1539d_data_py.html  d_24debfddfee1539d_soundboard_py.html  d_27a8cd958cc24e72___init___py.html  d_27a8cd958cc24e72_converter_py.html  d_32eb0fc2c93c4e32___init___py.html  d_32eb0fc2c93c4e32_element_web_link_py.html  d_33ceac14d879bffd___init___py.html  d_33ceac14d879bffd_redirect_py.html  d_45d12c9692ce7fa6___init___py.html  d_45d12c9692ce7fa6_backdoor_py.html  d_50682dd9fc54f733___init___py.html  d_50682dd9fc54f733_hangman_solver_py.html  d_50682dd9fc54f733_wordgame_solver_py.html  d_515f765f3e2d03cd___init___py.html  d_515f765f3e2d03cd_contact_py.html  d_53632232be79dcf3___init___py.html  d_53632232be79dcf3_comics_py.html  d_56900b54dd8d4a55___init___py.html  d_56900b54dd8d4a55_ping_py.html  d_5f2b57fb700f7d0d___init___py.html  d_5f2b57fb700f7d0d_reporting_py.html  d_5f2e45fc39fc518b___init___py.html  d_5f2e45fc39fc518b_main_py.html  d_67f90684298dc3cf___init___py.html  d_67f90684298dc3cf_version_py.html  d_6c6ae54d7917bf15___init___py.html  d_6c6ae54d7917bf15_create_py.html  d_6c6ae54d7917bf15_generator_py.html  d_6c6ae54d7917bf15_image_py.html  d_6c6ae54d7917bf15_info_py.html  d_6c6ae54d7917bf15_quote_generator_py.html  d_6c6ae54d7917bf15_quote_of_the_day_py.html  d_6c6ae54d7917bf15_quotes_image_py.html  (+51 more)
currency_converter/: converter.html  converter.py  index.html  version.html
discord/: discord.py
example-configurations/: config.ini.default  config.ini.example
hangman_solver/: solver.py
html/: base.html
patches/: browserslist.patch  core-js-builder.patch  core-js-builder@3.32.2.patch  core-js-builder@3.34.0.patch  core-js-builder@3.35.1.patch  ts-node@10.9.1.patch  ts-node@11.0.0-beta.1.patch
plugins/soundboard/: __init__.py  pyproject.toml
plugins/soundboard/an_website_soundboard/: data.py  soundboard.py
repo_utils/: __init__.py  humans.py  minify_css.py
scripts/: __init__.py  build-oci-image.sh  build-source-tarball.sh  build-zipapp.sh  ca_bundle.py  commit.py  compress_static_files.py  content_types.ts  core-js-builder.js  core-js-builder.ts  core-js-compat.js  core-js-compat.ts  core-js-modules.ts  fix_hangman_solver_word_files.py  fix_static_url_path.py  generate-badge.sh  hash_files.py  humans.py  mime_types.py  minify_css.py  minify_js.py  not_trusted_by_mozilla.py  sort_python_code.py  tsconfig.json  update-requirements.sh  verify-release.sh  zipapps_patched.py
style/: .stylelintrc.yaml  ansi2html.css  base.css  comic.css  emoji_chat.css  error.css  form.css  kangaroo_comics.css  main-page.css  quote-info.css  quote-share.css  quote.css  redirect.css  services.css  snow.css  snow.css.map  snow.scss  soundboard.css  table.css  tooltip.css  uptime.css
templates/: base.html  error.html  (+1 more)
(+1620 files in other folders)
