[build-system]
requires = ["setuptools==69.5.1", "wheel==0.42.0"]
build-backend = "setuptools.build_meta"

[tool.bandit]
skips = ["B101", "B311", "B413"]

[tool.black]
target-version = ["py312"]
line-length = 80

[tool.isort]
add_imports = ["from __future__ import annotations"]
atomic = true
combine_as_imports = true
line_length = 80
profile = "black"
py_version = "312"
remove_redundant_aliases = true
skip_gitignore = true

[tool.mypy]
strict = true
sqlite_cache = true
python_version = "3.12"
warn_unreachable = true
# disallow_any_expr = true
# disallow_any_explicit = true
# disallow_any_decorated = true
disallow_any_unimported = true
plugins = "numpy.typing.mypy_plugin"
enable_error_code = [
  # "explicit-override",
  "ignore-without-code",
  "possibly-undefined",
  "redundant-expr",
  "redundant-self",
  "truthy-bool",
  "truthy-iterable",
  "unused-awaitable",
]
local_partial_types = true
disable_bytearray_promotion = true
disable_memoryview_promotion = true
enable_incomplete_feature = ["NewGenericSyntax", "PreciseTupleTypes"]
packages = ["an_website", "tests", "scripts"]
modules = "setup"
