[build-system]
requires = ["setuptools==70.3.0"]
build-backend = "setuptools.build_meta"

[tool.bandit]
skips = ["B101", "B311", "B413"]

[tool.black]
target-version = ["py312", "py313"]
line-length = 80

[tool.isort]
atomic = true
combine_as_imports = true
line_length = 80
profile = "black"
py_version = "312"
remove_redundant_aliases = true
skip_gitignore = true

[tool.mypy]
strict = true
strict_bytes = true
sqlite_cache = true
python_version = "3.12"
warn_unreachable = true
# disallow_any_expr = true
# disallow_any_explicit = true
# disallow_any_decorated = true
disallow_any_unimported = true
plugins = "numpy.typing.mypy_plugin"
enable_error_code = [
  # "explicit-override",
  "ignore-without-code",
  "possibly-undefined",
  "redundant-expr",
  "redundant-self",
  "truthy-bool",
  "truthy-iterable",
  "unused-awaitable",
]
local_partial_types = true
enable_incomplete_feature = ["PreciseTupleTypes"]
packages = ["an_website", "tests", "scripts"]
modules = "setup"
